--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
     <script src="https://code.highcharts.com/modules/exporting.js"></script>
     <script src="https://code.highcharts.com/modules/export-data.js"></script>
     <script src="https://code.highcharts.com/modules/accessibility.js"></script>
+    <script src="js/data.js"></script>
     <script src="js/script.js"></script>
 </body>
 </html>
